<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_go_to_artist"
        android:icon="@drawable/ic_artist"
        android:title="@string/action_go_to_artist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_go_to_album"
        android:icon="@drawable/ic_album"
        android:title="@string/action_go_to_album"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="1"
        android:title="@string/action_share" />

    <item
        android:id="@+id/action_details"
        android:orderInCategory="1"
        android:title="@string/action_details" />

    <item
        android:id="@+id/action_lyrics"
        android:orderInCategory="1"
        android:title="@string/lyrics"
        android:visible="false"/>

    <item
        android:id="@+id/action_tag_editor"
        android:orderInCategory="1"
        android:title="@string/action_tag_editor"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_from_device"
        android:orderInCategory="1"
        android:title="@string/action_delete_from_device"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_playlist"
        android:orderInCategory="1"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_playing_queue"
        android:orderInCategory="1"
        android:title="@string/action_save_playing_queue"
        app:showAsAction="never" />
</menu>
