<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_new_playlist"
        android:title="@string/action_new_playlist"
        app:showAsAction="never" />


    <item
        android:id="@+id/nav_queue"
        android:title="@string/queue" />
    <item
        android:id="@+id/nav_library"
        android:title="@string/library" />
    <item
        android:id="@+id/nav_folders"
        android:title="@string/folders" />
    <item
        android:id="@+id/nav_timer"
        android:title="@string/sleep_timer" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/action_settings" />

</menu>