<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/navigation_drawer_menu_category_sections"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_queue"
            android:title="@string/queue" />
        <item
            android:id="@+id/nav_library"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_folders"
            android:title="@string/folders" />
        <item
            android:id="@+id/nav_eq"
            android:title="@string/equalizer" />
        <item
            android:id="@+id/nav_timer"
            android:title="@string/sleep_timer" />
    </group>


    <group
        android:id="@+id/navigation_drawer_menu_category_other"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings" />
    </group>

</menu>
