<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_audio"
        app:allowDividerBelow="false">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="audio_ducking"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_audio_ducking"
            android:title="@string/pref_title_audio_ducking"
            app:icon="@drawable/ic_volume_down"
            app:allowDividerBelow="false" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="gapless_playback"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_gapless_playback"
            android:title="@string/pref_title_gapless_playback"
            app:icon="@drawable/ic_play_arrow"
            app:allowDividerBelow="false"  />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="equalizer"
            android:layout="@layout/list_item_view_no_title"
            android:title="@string/equalizer"
            app:icon="@drawable/ic_equalizer" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>