<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        app:title="@string/home"
        app:allowDividerBelow="false">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_home_grid_style_list_titles"
            android:entryValues="@array/pref_home_grid_style_list_values"
            android:key="home_artist_grid_style"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_home_artist_grid_style"
            app:icon="@drawable/ic_home"
            app:allowDividerBelow="false" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="toggle_home_banner"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_home_banner"
            android:title="@string/pref_title_home_banner"
            app:allowDividerBelow="false" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="colored_footer"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_colored_footers_summary"
            android:title="@string/pref_colored_footers" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_library"
        app:allowDividerBelow="false" >

        <com.o4x.musical.preferences.LibraryPreference
            android:key="library_categories"
            android:layout="@layout/list_item_view"
            android:summary="@string/pref_summary_library_categories"
            android:title="@string/library_categories"
            app:icon="@drawable/ic_library_music" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_lockscreen"
        app:allowDividerBelow="false" >

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="album_art_on_lockscreen"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_album_art_on_lockscreen"
            android:title="@string/pref_title_album_art_on_lockscreen" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</androidx.preference.PreferenceScreen>