<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_play_next"
        android:icon="@drawable/ic_redo"
        android:title="@string/action_play_next"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_to_current_playing"
        android:icon="@drawable/ic_library_add"
        android:title="@string/action_add_to_playing_queue"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_to_playlist"
        android:icon="@drawable/ic_playlist_add"
        android:title="@string/action_add_to_playlist"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_from_device"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete_from_device"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/action_multi_select_adapter_check_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all_title"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom" />

</menu>
