<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_lists"
        app:allowDividerBelow="false">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="smart_playlist_limit"
            android:layout="@layout/list_item_view"
            android:title="Smart playlists restriction"
            app:icon="@drawable/ic_playlist_add" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_advanced"
        app:allowDividerBelow="false">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESeekBarPreference
            android:defaultValue="30"
            android:key="filter_song"
            android:layout="@layout/list_item_view_seekbar"
            android:max="60"
            android:summary="@string/pref_filter_song_summary"
            android:title="@string/pref_filter_song_title"
            app:icon="@drawable/ic_filter_song"
            app:showSeekBarValue="true" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
        android:defaultValue="auto"
        android:entries="@array/pref_language_names"
        android:entryValues="@array/pref_language_codes"
        android:key="language_name"
        android:layout="@layout/list_item_view"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_language_name"
        app:icon="@drawable/ic_language"
        app:allowDividerBelow="false" />

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreference
        android:key="about"
        android:layout="@layout/list_item_view"
        android:title="@string/action_about"
        android:summary="@string/about_settings_summary"
        app:icon="@drawable/ic_info_outline" />

</androidx.preference.PreferenceScreen>