<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_general"
        app:allowDividerBelow="false">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="auto"
            android:entries="@array/pref_general_theme_list_titles"
            android:entryValues="@array/pref_general_theme_list_values"
            android:key="general_theme"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_general_theme"
            app:icon="@drawable/ic_color_lens"
            app:allowDividerBelow="false" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEColorPreference
            android:key="theme_color"
            android:layout="@layout/list_item_color_view"
            android:persistent="false"
            android:summary="@string/theme_color_desc"
            android:title="@string/theme_color"
            app:icon="@drawable/ic_colorize"
            app:allowDividerBelow="false"/>

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>