<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/search_fragment"
        android:name="github.o4x.musical.ui.fragments.mainactivity.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/home_fragment"
        android:name="github.o4x.musical.ui.fragments.mainactivity.home.HomeFragment"
        android:label="@string/musical"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/queue_fragment"
        android:name="github.o4x.musical.ui.fragments.mainactivity.queue.QueueFragment"
        android:label="@string/playing_queue"
        tools:layout="@layout/fragment_queue" />

    <fragment
        android:id="@+id/library_fragment"
        android:name="github.o4x.musical.ui.fragments.mainactivity.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/folders_fragment"
        android:name="github.o4x.musical.ui.fragments.mainactivity.folders.FoldersFragment"
        android:label="@string/folders"
        tools:layout="@layout/fragment_folder" />

    <fragment
        android:id="@+id/timer_fragment"
        android:name="github.o4x.musical.ui.fragments.mainactivity.timer.TimerFragment"
        android:label="@string/sleep_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/playlist_detail_fragment"
        android:name="github.o4x.musical.ui.fragments.mainactivity.datails.PlaylistDetailFragment"
        android:label="@string/playlists"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/genre_detail_fragment"
        android:name="github.o4x.musical.ui.fragments.mainactivity.datails.GenreDetailFragment"
        android:label="@string/genres"
        tools:layout="@layout/fragment_detail" />

    <activity
        android:id="@+id/settings_activity"
        android:name="github.o4x.musical.ui.activities.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/activity_settings"/>

    <action
        android:id="@+id/action_to_search"
        app:destination="@id/search_fragment"
        app:enterAnim="@anim/fragment_open_enter"
        app:exitAnim="@anim/fragment_open_exit"
        app:popEnterAnim="@anim/fragment_close_enter"
        app:popExitAnim="@anim/fragment_close_exit"/>

    <action
        android:id="@+id/action_to_queue"
        app:destination="@id/queue_fragment"
        app:popUpTo="@id/home_fragment"
        app:enterAnim="@anim/fragment_open_enter"
        app:exitAnim="@anim/fragment_open_exit"
        app:popEnterAnim="@anim/fragment_close_enter"
        app:popExitAnim="@anim/fragment_close_exit"/>

    <action
        android:id="@+id/action_to_library"
        app:destination="@id/library_fragment"
        app:popUpTo="@id/home_fragment"
        app:enterAnim="@anim/fragment_open_enter"
        app:exitAnim="@anim/fragment_open_exit"
        app:popEnterAnim="@anim/fragment_close_enter"
        app:popExitAnim="@anim/fragment_close_exit"/>

    <action
        android:id="@+id/action_to_folders"
        app:destination="@id/folders_fragment"
        app:popUpTo="@id/home_fragment"
        app:enterAnim="@anim/fragment_open_enter"
        app:exitAnim="@anim/fragment_open_exit"
        app:popEnterAnim="@anim/fragment_close_enter"
        app:popExitAnim="@anim/fragment_close_exit"/>

    <action
        android:id="@+id/action_to_timer"
        app:destination="@id/timer_fragment"
        app:popUpTo="@id/home_fragment"
        app:enterAnim="@anim/fragment_open_enter"
        app:exitAnim="@anim/fragment_open_exit"
        app:popEnterAnim="@anim/fragment_close_enter"
        app:popExitAnim="@anim/fragment_close_exit"/>

    <action
        android:id="@+id/action_to_playlist"
        app:destination="@id/playlist_detail_fragment"
        app:enterAnim="@anim/fragment_open_enter"
        app:exitAnim="@anim/fragment_open_exit"
        app:popEnterAnim="@anim/fragment_close_enter"
        app:popExitAnim="@anim/fragment_close_exit" />

    <action
        android:id="@+id/action_to_genre"
        app:destination="@id/genre_detail_fragment"
        app:enterAnim="@anim/fragment_open_enter"
        app:exitAnim="@anim/fragment_open_exit"
        app:popEnterAnim="@anim/fragment_close_enter"
        app:popExitAnim="@anim/fragment_close_exit" />

</navigation>