<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_graph"
    app:startDestination="@id/mainSettings">

    <fragment
        android:id="@+id/mainSettings"
        android:name="com.o4x.musical.ui.fragments.settings.MainSettingsFragment"
        android:label="@string/action_settings">


        <action
            android:id="@+id/action_mainSettings_to_about"
            app:destination="@id/about"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />


    </fragment>


    <fragment
        android:id="@+id/about"
        android:name="com.o4x.musical.ui.fragments.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about">

        <action
            android:id="@+id/action_about_to_bug"
            app:destination="@id/bugReport"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/bugReport"
        android:name="com.o4x.musical.ui.fragments.bugreport.model.BugReportFragment"
        android:label="@string/report_bug"
        tools:layout="@layout/fragment_bug_report" />

</navigation>